--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "object-size",
     "size",
     "C",
-    "native"
+    "native",
+    "bytes",
+    "memory"
   ],
   "scripts": {
     "build": "cargo-cp-artifact -nc index.node -- cargo build --message-format=json-render-diagnostics",
