--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,11 +18,12 @@ jobs:
     - name: Install stable toolchain
       uses: actions-rs/toolchain@v1
       with:
-        profile: minimal
         toolchain: stable
-        override: true
     - run: npm ci
     - run: npm run build
     - run: npm test
-      env:
-        CI: true
+    - name: Publish
+      if: "contains(github.event.head_commit.message, '[publish binary]')"
+      run: |
+        COMMIT_MESSAGE=$(git log --format=%B --no-merges -n 1 | tr -d '\n') \
+        npm run upload-binary
