--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,15 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    name: "build on ${{ matrix.os }} (node version ${{ matrix.node-version }})"
+
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         node-version: [10.x, 12.x, 14.x]
+
+    runs-on: ${{ matrix.os }}
+
     steps:
     - name: "Checkout"
       uses: actions/checkout@v2
