Migrate to neon cli

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,8 @@ jobs:
     - run: npm test
     - name: Publish
       if: "contains(github.event.head_commit.message, 'Release')"
+      env:
+        NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }}
       run: |
         COMMIT_MESSAGE=$(git log --format=%B --no-merges -n 1 | tr -d '\n') \
-        NODE_PRE_GYP_GITHUB_TOKEN=${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }} npm run upload-binary
+        npm run upload-binary
