--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.1",
   "description": "A native package to quickly calculate an object size",
   "main": "./native/index.node",
-  "files": [
-    "src"
-  ],
   "keywords": [
     "sizeof",
     "object-size",
@@ -17,10 +14,10 @@
   ],
   "scripts": {
     "clean": "rm -rf node_modules target src/target native",
-    "build": "cargo-cp-artifact -nc native/index.node -- cargo build --message-format=json-render-diagnostics",
+    "build": "neon build --release",
     "install": "node-pre-gyp install --fallback-to-build=false || npm run build",
     "pretest": "npm run build",
-    "test": "cargo test && jest",
+    "test": "jest",
     "package": "node-pre-gyp package",
     "upload-binary": "node-pre-gyp package && node-pre-gyp-github publish"
   },
@@ -39,9 +36,9 @@
   "author": "Idan Attias",
   "license": "ISC",
   "devDependencies": {
-    "cargo-cp-artifact": "^0.1",
     "chance": "^1.1.7",
     "jest": "^26.6.3",
+    "neon-cli": "^0.8.2",
     "node-pre-gyp-github": "^1.4.3"
   },
   "dependencies": {
