--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "pretest": "npm run build",
     "test": "jest",
     "package": "node-pre-gyp package",
-    "upload-binary": "node-pre-gyp package && node-pre-gyp-github publish --release"
+    "upload-binary": "node-pre-gyp package && node ./scripts/publish"
   },
   "repository": {
     "type": "git",
@@ -39,10 +39,11 @@
   "author": "Idan Attias",
   "license": "ISC",
   "devDependencies": {
+    "@octokit/rest": "^18.12.0",
     "chance": "^1.1.7",
+    "fs-extra": "^10.0.0",
     "jest": "^26.6.3",
-    "neon-cli": "^0.8.2",
-    "node-pre-gyp-github": "^1.4.3"
+    "neon-cli": "^0.8.2"
   },
   "dependencies": {
     "node-pre-gyp": "^0.17.0"
